# NeoAiSport

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: NEO-ONE-INSTALL.md  NeoAiSport-Plan.md
scripts/: install_on_neo.sh
src/neoaisport/: __init__.py  config.py  hub.py
src/neoaisport/ballde/: __init__.py  app.py  game.py  render.py
src/neoaisport/batde/: __init__.py  app.py  game.py  render.py
src/neoaisport/dobong/: __init__.py  app.py  game.py  render.py
src/neoaisport/huongmua/: __init__.py  app.py  game.py  render.py
src/neoaisport/input/: __init__.py  vision.py
src/neoaisport/storage/: __init__.py
src/neoaisport/ui/: sprites.py  widgets.py
tests/: test_ballde.py  test_batde.py  test_dobong.py  test_huongmua.py
